[package]
name = "smooth-bevy-cameras"
description = "Bevy camera controllers with buttery, exponential smoothing."
version = "0.8.0"
repository = "https://github.com/bonsairobo/smooth-bevy-cameras"
authors = ["Duncan <bonsairobo@gmail.com>"]
keywords = ["bevy", "camera"]
edition = "2021"
license = "MIT"

[dependencies]
approx = "0.5"

serde = { version = "1.0", optional = true }

[dependencies.bevy]
version = "0.11"
# git = "https://github.com/bevyengine/bevy"
# rev = "f3de12bc"
# branch = "main"
default-features = false

[dev-dependencies.bevy]
version = "0.11"
# git = "https://github.com/bevyengine/bevy"
# rev = "f3de12bc"
# branch = "main"
features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_winit",
    "bevy_gltf",
    "bevy_render",
]
default-features = false

[target.'cfg(target_os = "linux")'.dev-dependencies.bevy]
version = "0.11"
# git = "https://github.com/bevyengine/bevy"
# rev = "f3de12bc"
# branch = "main"
features = ["bevy_asset", "x11", "wayland"]
default-features = false
