[package]
name = "smooth-bevy-cameras"
description = "Bevy camera controllers with buttery, exponential smoothing."
version = "0.13.0"
repository = "https://github.com/bonsairobo/smooth-bevy-cameras"
authors = ["Duncan <bonsairobo@gmail.com>"]
keywords = ["bevy", "camera"]
edition = "2021"
license = "MIT"

[dependencies]
approx = "0.5"
serde = { version = "1.0", optional = true }

[dependencies.bevy]
version = "0.15"
default-features = false

[dev-dependencies.bevy]
version = "0.15"
default-features = true
